# sqlrepository

./: README.md  pyproject.toml  trivy.yaml
.github/: CICD.md  copilot-instructions.md  instructions.md
.github/copilot-skills/: chore.instructions.md  release.instructions.md
.github/workflows/: build-wheels.yml  ci.yml  release.yml
src/sqlrepository/: __init__.py  asyncio.py  core.py  sqlmodel.py
tests/: conftest.py
tests/resources/: albums.json  artists.json
tests/sqlalchemy/: conftest.py  models.py  repositories.py  test_async_repository.py  test_generics.py  test_repository.py  test_special_cases.py
tests/sqlmodel/: conftest.py  models.py  repositories.py  test_async_repository.py  test_generics.py  test_repository.py  test_special_cases.py
